do not use a fixed position header on the map screen as that causes the size of the screen to jump before navigation and the confirm button and attribution text to move

--- a/phonegap/www/css/fms.css
+++ b/phonegap/www/css/fms.css
@@ -112,12 +112,11 @@
 
     .mapbox{
         position:absolute;
-        top: 0, left: 0, right: 0, bottom: 0;
+        top: 45px, left: 0, right: 0, bottom: 0;
         padding: 0px;
         display:block;
         height: 100%;
         width: 100%;
-        margin: -15px;
     }
 
     .mapbox #map {
